objects/EUR_CRM_Pros_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <referenceTo>EUR_CRM_Affiliate__c</referenceTo>
        <relationshipName>EUR_CRM_Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Decision_Tree__c</fullName>
        <formula>IF(
OR(RecordType.DeveloperName = &quot;EUR_LT_PROS_Segmentation&quot;,RecordType.DeveloperName = &quot;EUR_LV_PROS_Segmentation&quot;, RecordType.DeveloperName = &quot;EUR_PRT_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_CZ_PROS_Segmentation&quot;, RecordType.DeveloperName = &quot;EUR_GB_PROS_Segmentation&quot;, RecordType.DeveloperName = &quot;EUR_SK_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_EE_PROS_Segmentation&quot;,RecordType.DeveloperName = &quot;EUR_AT_PROS_Segmentation&quot;,RecordType.DeveloperName = &quot;EUR_DE_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_E1_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_AO_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_KE_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_FI_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_NG_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_ZA_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_MA_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_RU_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_CH_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_DK_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_BG_PROS_Segmentation&quot;,
RecordType.DeveloperName = &quot;EUR_PT_PROS_Segmentation&quot;
),


&quot;EUR_CRM_GroupOutletTypePage&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_ToDELETE__c</fullName>
        <label>Group Outlet Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Id__c</fullName>
        <formula>CASESAFEID(EUR_CRM_Image_Level_Threshold__r.EUR_CRM_Image_Level_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Threshold</label>
        <referenceTo>EUR_CRM_Image_Level_Threshold__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_ToDELETE__c</fullName>
        <label>Image Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_Image_Level__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Image_Level_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that image level criteria sheet was modified</description>
        <label>Is Image Level Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Volume_Potential_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that volume potential criteria sheet was modified</description>
        <label>Is Volume Potential Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type_ToDELETE__c</fullName>
        <label>Outlet Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>EUR_CRM_Outlet_Type__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Service_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate Service Pack to Pros Segmentation</description>
        <label>Service Pack</label>
        <referenceTo>EUR_CRM_Service_Pack__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Standard_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Image_Level_Weight__c</fullName>
        <description>Total Weight of Image Level</description>
        <label>Total Image Level Weight</label>
        <summarizedField>EUR_CRM_Pros_Image_Level__c.EUR_CRM_Weight__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Pros_Image_Level__c.EUR_CRM_Pros_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Volume_Weight__c</fullName>
        <description>Total Volume Potential Weight</description>
        <label>Total Volume Potential Weight</label>
        <summarizedField>EUR_CRM_Pros_Volume_Potential__c.EUR_CRM_Weight__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Pros_Volume_Potential__c.EUR_CRM_Pros_Segmentation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Id__c</fullName>
        <formula>CASESAFEID(EUR_CRM_Volume_Potential_Threshold__r.EUR_CRM_Volume_Potential_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Threshold</label>
        <referenceTo>EUR_CRM_Volume_Potential_Threshold__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_ToDELETE__c</fullName>
        <label>Volume Potential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_Volume_Potential__c</referenceTo>
        <relationshipName>Pros_Segmentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pros Segmentation (EU)</label>
    <listViews>
        <fullName>All_DK</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Threshold__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>All DK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GB</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Decision_Tree__c</columns>
        <columns>EUR_CRM_Service_Pack__c</columns>
        <columns>EUR_CRM_Standard_Account__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_ToDELETE__c</columns>
        <columns>EUR_CRM_Image_Level_Threshold__c</columns>
        <columns>EUR_CRM_Volume_Potential_ToDELETE__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Threshold__c</columns>
        <columns>EUR_CRM_Outlet_Type_ToDELETE__c</columns>
        <columns>EUR_CRM_Outlet_Type__c</columns>
        <columns>EUR_CRM_Total_Image_Level_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Pros_Segmentation__c.EUR_GB_PROS_Segmentation</value>
        </filters>
        <label>All GB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NG</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Decision_Tree__c</columns>
        <columns>EUR_CRM_Service_Pack__c</columns>
        <columns>EUR_CRM_Standard_Account__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_ToDELETE__c</columns>
        <columns>EUR_CRM_Image_Level_Threshold__c</columns>
        <columns>EUR_CRM_Volume_Potential_ToDELETE__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Threshold__c</columns>
        <columns>EUR_CRM_Outlet_Type_ToDELETE__c</columns>
        <columns>EUR_CRM_Outlet_Type__c</columns>
        <columns>EUR_CRM_Total_Image_Level_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Pros_Segmentation__c.EUR_NG_PROS_Segmentation</value>
        </filters>
        <label>All NG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Decision_Tree__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_ToDELETE__c</columns>
        <columns>EUR_CRM_Image_Level_Threshold__c</columns>
        <columns>EUR_CRM_Volume_Potential_ToDELETE__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Threshold__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type_ToDELETE__c</columns>
        <columns>EUR_CRM_Outlet_Type__c</columns>
        <columns>EUR_CRM_Total_Image_Level_Weight__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Pros_Segmentation__c.EUR_ZA_PROS_Segmentation</value>
        </filters>
        <label>All ZA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Pros_Segmentation_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_Id__c</columns>
        <columns>EUR_CRM_Service_Pack__c</columns>
        <columns>EUR_CRM_Image_Level_Threshold__c</columns>
        <columns>EUR_CRM_Total_Image_Level_Weight__c</columns>
        <columns>EUR_CRM_Volume_Potential_Threshold__c</columns>
        <columns>EUR_CRM_Total_Volume_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>PT</value>
        </filters>
        <label>EUR PT All Pros Segmentation View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>PROS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pros Segmentation (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR AO PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_AT_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR BG PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR CH PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_DE_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_PROS_Segmentation</fullName>
        <active>true</active>
        <description>Record Type for DK PROS Segmentation</description>
        <label>EUR DK PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_EE_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR FI PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_GB_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR KE PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_LT_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_LV_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR MA PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR NG PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR_PRT_PROS_Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR PT PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR RU PROS Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_PROS_Segmentation</fullName>
        <active>true</active>
        <label>EUR ZA PROS Segmentation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>